# variant

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: Sanitizers.cmake  SuperBuild.cmake  VariantConfig.cmake
examples/: CMakeLists.txt  json.cpp  json.hpp
include/: CMakeLists.txt
include/variant/: variant.hpp
tests/: CMakeLists.txt  variant_tests.cpp
